Style changes including background and content changes for first two slides

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="css/fullPage/jquery.fullPage.css" />
     <!-- Custom styles for this template -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-
 </head>
 <body class="home-page">
     <nav class="navbar navbar-default navbar-static-top">
@@ -99,34 +98,63 @@
     </nav>
     <div id="fullpage">
         <div class="section " id="section0">
-            <h1>fullPage.js</h1>
-            <p>Create Beautiful Fullscreen Scrolling Websites</p>
+            <h1>Hello, World!</h1>
+            <p>Scroll down to learn more about me.</p>
         </div>
         <div class="section" id="section1">
             <div class="slide">
                 <div class="intro">
-                    <h1>Create Sliders</h1>
-                    <p>Not only vertical scrolling but also horizontal scrolling. With fullPage.js you will be able to add horizontal sliders in the most simple way ever.</p>
-                </div>
-
-            </div>
-            <div class="slide">
-                <div class="intro">
-                    <h1>Simple</h1>
-                    <p>Easy to use. Configurable and customizable.</p>
+                    <h1>Technologies</h1>
+                    <p>I have explored a wide-range of technologies throughout my career.  Presently, I am a .NET developer at 2-COM in Brentwood, TN.</p>
                 </div>
             </div>
             <div class="slide">
                 <div class="intro">
-                    <h1>Cool</h1>
-                    <p>It just looks cool. Impress everybody with a simple and modern web design!</p>
+                    <h1>Tech Stack</h1>
+                    <div class="tech-stack">
+                        <ul>
+                            <li><span class="devicons devicons-html5"></span></li>
+                            <li><span class="devicons devicons-css3"></span></li>
+                            <li><span class="devicons devicons-less"></span></li>
+                            <li><span class="devicons devicons-javascript"></span></li>
+                            <li><span class="devicons devicons-jquery"></span></li>
+                            <li><span class="devicons devicons-jquery_ui"></span></li>
+                            <li><span class="devicons devicons-dotnet"></span></li>
+                            <li><span class="devicons devicons-angular"></span></li>
+                            <li><span class="devicons devicons-ruby_on_rails"></span></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="slide">
                 <div class="intro">
-                    <h1>Compatible</h1>
-                    <p>Working in modern and old browsers too! IE 8 users don't have the fault of using that horrible browser! Lets give them a chance to see your site in a proper way!</p>
+                    <h1>Tools Used</h1>
+                    <div class="tools-used">
+                        <ul>
+                            <li><span class="devicons devicons-visualstudio"></span></li>
+                            <li><span class="devicons devicons-msql_server"></span></li>
+                            <li><span class="devicons devicons-github"></span></li>
+                            <li><span class="devicons devicons-heroku"></span></li>
+                            <li><span class="devicons devicons-sublime"></span></li>
+                            <li><span class="devicons devicons-chrome"></span></li>
+                            <li><span class="devicons devicons-firefox"></span></li>
+                            <li><span class="devicons devicons-ie"></span></li>
+                        </ul>
+                    </div>
                 </div>
+            </div>
+            <div class="slide">
+                <div class="intro">
+                    <h1>OS/Other</h1>
+                    <div class="tools-used">
+                        <ul>
+                            <li><span class="devicons devicons-windows"></span></li>
+                            <li><span class="devicons devicons-apple"></span></li>
+                            <li><span class="devicons devicons-ubuntu"></span></li>
+                            <li><span class="devicons devicons-photoshop"></span></li>
+                            <li><span class="devicons devicons-illustrator"></span></li>
+                        </ul>
+                    </div>                </div>
             </div>
         </div>
         <div class="section" id="section2">
@@ -140,121 +168,11 @@
                 <h1>Working On Tablets</h1>
                 <p>
                     Designed to fit to different screen sizes as well as tablet and mobile devices.
-                    <br /><br /><br /><br /><br /><br />
+                    <!--<br /><br /><br /><br /><br /><br />-->
                 </p>
             </div>
         </div>
     </div>
-    <!--<div id="skrollr-body" class="container">
-        <section id="slide-1" class="homeSlide">
-            <div class="bcg"
-                 data-center="background-position: 50% 0px;"
-                 data-top-bottom="background-position: 50% -100px;"
-                 data-anchor-target="#slide-1">
-                <div class="hsContainer">
-                    <div class="hsContent"
-                         data-center="opacity: 1"
-                         data--106-top="opacity: 0" 
-                         data-anchor-target="#slide-1 h2">
-                        <h2>Tech Stack</h2>
-                        <div class="tech-stack">
-                            <ul>
-                                <li><span class="devicons devicons-html5"></span></li>
-                                <li><span class="devicons devicons-css3"></span></li>
-                                <li><span class="devicons devicons-less"></span></li>
-                                <li><span class="devicons devicons-javascript"></span></li>
-                                <li><span class="devicons devicons-jquery"></span></li>
-                                <li><span class="devicons devicons-jquery_ui"></span></li>
-                                <li><span class="devicons devicons-dotnet"></span></li>
-                                <li><span class="devicons devicons-angular"></span></li>
-                                <li><span class="devicons devicons-ruby_on_rails"></span></li>
-
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="slide-2" class="homeSlide">
-            <div class="bcg"
-                 data-0="background-color:rgb(1,27,59);"
-                 data-top="background-color:(0,0,0);"
-                 data-anchor-target="#slide-2">
-                <div class="hsContainer">
-                    <div class="hsContent" data-center="opacity: 1"
-                         data--200-bottom="opacity: 0"
-                         data-206-top="opacity: 1"
-                         data-56-top="opacity: 0"
-                         data-anchor-target="#slide-2 h2">
-                        <h2 style="text-align: right;">
-                            Tools Used
-                        </h2>
-                        <div class="tools-used">
-                            <ul>
-                                <li><span class="devicons devicons-visualstudio"></span></li>
-                                <li><span class="devicons devicons-msql_server"></span></li>
-                                <li><span class="devicons devicons-github"></span></li>
-                                <li><span class="devicons devicons-heroku"></span></li>
-                                <li><span class="devicons devicons-sublime"></span></li>
-                                <li><span class="devicons devicons-chrome"></span></li>
-                                <li><span class="devicons devicons-firefox"></span></li>
-                                <li><span class="devicons devicons-ie"></span></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="slide-3" class="homeSlide">
-            <div class="bcg"
-                 data-center="background-position: 50% 0px;"
-                 data-top-bottom="background-position: 50% -100px;"
-                 data-anchor-target="#slide-3">
-                <div class="hsContainer">
-                    <div class="hsContent"
-                         data-center="opacity: 1"
-                         data--106-top="opacity: 0"
-                         data-anchor-target="#slide-3 h2">
-                        <h2>Operating Systems/Other</h2>
-                        <div class="tools-used">
-                            <ul>
-                                <li><span class="devicons devicons-windows"></span></li>
-                                <li><span class="devicons devicons-apple"></span></li>
-                                <li><span class="devicons devicons-ubuntu"></span></li>
-                                <li><span class="devicons devicons-photoshop"></span></li>
-                                <li><span class="devicons devicons-illustrator"></span></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="slide-4" class="homeSlide">
-            <div class="bcg"
-                 data-0="background-color:rgb(1,27,59);"
-                 data-top="background-color:(0,0,0);"
-                 data-anchor-target="#slide-4">
-                <div class="hsContainer">
-                    <div class="hsContent"
-                         data--0-bottom="opacity: 0"
-                         data-center="opacity: 1"
-                         data-206-top="opacity: 1"
-                         data-10-top="opacity: 0"
-                         data-anchor-target="#slide-4 h2">
-                        <h2 style="text-align: right;">
-                            View my Gists<br /> or add me on Steam!
-                        </h2>
-                        <div class="tools-used">
-                            <ul>
-                                <li><a href="https://gist.github.com/jmahc"><span class="devicons devicons-github" style=" font-size: 2.5em; position: absolute; right: 120px; top: 0;"></span></a></li>
-                                <li><a href="http://steamcommunity.com/id/jmahc/"><i class="fa fa-steam fa-stack-2x" style="position: relative; top: 10px;"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>-->
     <footer></footer>
     <script src="scripts/jquery-1.11.3.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
