--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <title>Jordan McArdle</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css">
-    <!--Font Awesome/Devicons-->
+    <!--Font Awesome/Devicon(s)-->
     <link rel="stylesheet" type="text/css" href="css/font-awesome/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="css/devicons/devicons.min.css">
+    <link rel="stylesheet" href="css/devicon/devicon.min.css" />
+    <link rel="stylesheet" href="css/devicon/devicon-colors.css" />
     <link rel="stylesheet" type="text/css" href="css/font-awesome/font-awesome-animation.min.css" />
     <!--FullPage.js-->
     <link rel="stylesheet" href="css/fullPage/jquery.fullPage.css" />
@@ -113,15 +115,40 @@
                     <h1>Tech Stack</h1>
                     <div class="tech-stack">
                         <ul>
-                            <li><span class="devicons devicons-html5"></span></li>
-                            <li><span class="devicons devicons-css3"></span></li>
-                            <li><span class="devicons devicons-less"></span></li>
-                            <li><span class="devicons devicons-javascript"></span></li>
-                            <li><span class="devicons devicons-jquery"></span></li>
-                            <li><span class="devicons devicons-jquery_ui"></span></li>
-                            <li><span class="devicons devicons-dotnet"></span></li>
-                            <li><span class="devicons devicons-angular"></span></li>
-                            <li><span class="devicons devicons-ruby_on_rails"></span></li>
+                            <li><i class="devicon-html5-plain"></i></li>
+                            <li class="svg-css3">
+                                <svg viewBox="0 0 128 128">
+                                    <svg viewBox="0 0 128 128">
+                                        <path fill="#1572B6" d="M18.814 114.123l-10.054-112.771h110.48l-10.064 112.754-45.243 12.543-45.119-12.526z"></path>
+                                        <path fill="#33A9DC" d="M64.001 117.062l36.559-10.136 8.601-96.354h-45.16v106.49z"></path>
+                                        <path fill="#fff" d="M64.001 51.429h18.302l1.264-14.163h-19.566v-13.831h34.681999999999995l-.332 3.711-3.4 38.114h-30.95v-13.831z"></path>
+                                        <path fill="#EBEBEB" d="M64.083 87.349l-.061.018-15.403-4.159-.985-11.031h-13.882l1.937 21.717 28.331 7.863.063-.018v-14.39z"></path>
+                                        <path fill="#fff" d="M81.127 64.675l-1.666 18.522-15.426 4.164v14.39l28.354-7.858.208-2.337 2.406-26.881h-13.876z"></path>
+                                        <path fill="#EBEBEB" d="M64.048 23.435v13.831000000000001h-33.407999999999994l-.277-3.108-.63-7.012-.331-3.711h34.646zM64.001 51.431v13.831000000000001h-15.209l-.277-3.108-.631-7.012-.33-3.711h16.447z"></path>
+                                    </svg>
+                                    <path fill="#1572B6" d="M18.814 114.123l-10.054-112.771h110.48l-10.064 112.754-45.243 12.543-45.119-12.526z"></path>
+                                    <path fill="#33A9DC" d="M64.001 117.062l36.559-10.136 8.601-96.354h-45.16v106.49z"></path>
+                                    <path fill="#fff" d="M64.001 51.429h18.302l1.264-14.163h-19.566v-13.831h34.681999999999995l-.332 3.711-3.4 38.114h-30.95v-13.831z"></path>
+                                    <path fill="#EBEBEB" d="M64.083 87.349l-.061.018-15.403-4.159-.985-11.031h-13.882l1.937 21.717 28.331 7.863.063-.018v-14.39z"></path>
+                                    <path fill="#fff" d="M81.127 64.675l-1.666 18.522-15.426 4.164v14.39l28.354-7.858.208-2.337 2.406-26.881h-13.876z"></path>
+                                    <path fill="#EBEBEB" d="M64.048 23.435v13.831000000000001h-33.407999999999994l-.277-3.108-.63-7.012-.331-3.711h34.646zM64.001 51.431v13.831000000000001h-15.209l-.277-3.108-.631-7.012-.33-3.711h16.447z"></path>
+                                </svg>
+                            </li>
+                            <li><i class="devicon-bootstrap-plain"></i></li>
+                            <li><i class="devicon-less-plain-wordmark"></i></li>
+                            <li><i class="devicon-sass-original"></i></li>
+                            <li><i class="devicon-javascript-plain"></i></li>
+                            <li><i class="devicon-jquery-plain"></i></li>
+                            <li><i class="devicon-csharp-plain"></i></li>
+                            <li><i class="devicon-dot-net-plain"></i></li>
+                            <li><i class="devicon-cplusplus-plain"></i></li>
+                            <li><i class="devicon-python-plain-wordmark"></i></li>
+                            <li><i class="devicon-ruby-plain"></i></li>
+                            <li><i class="devicon-rails-plain"></i></li>
+                            <li><i class="devicon-angularjs-plain"></i></li>
+                            <li><i class="devicon-nodejs-plain"></i></li>
+                            <li><i class="devicon-bower-line"></i></li>
+                            <li><i class="devicon-gulp-plain"></i></li>
                         </ul>
                     </div>
                 </div>
@@ -133,12 +160,13 @@
                         <ul>
                             <li><span class="devicons devicons-visualstudio"></span></li>
                             <li><span class="devicons devicons-msql_server"></span></li>
-                            <li><span class="devicons devicons-github"></span></li>
-                            <li><span class="devicons devicons-heroku"></span></li>
-                            <li><span class="devicons devicons-sublime"></span></li>
-                            <li><span class="devicons devicons-chrome"></span></li>
-                            <li><span class="devicons devicons-firefox"></span></li>
-                            <li><span class="devicons devicons-ie"></span></li>
+                            <li data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom"><i class="devicon-git-plain"></i></li>
+                            <li><i class="devicon-heroku-original"></i></li>
+                            <li><i class="devicon-trello-plain"></i></li>
+                            <li><i class="devicon-atom-original"></i></li>
+                            <li><i class="devicon-chrome-plain"></i></li>
+                            <li><i class="devicon-firefox-plain"></i></li>
+                            <li><i class="devicon-ie10-original"></i></li>
                         </ul>
                     </div>
                 </div>
@@ -146,15 +174,16 @@
             <div class="slide">
                 <div class="intro">
                     <h1>OS/Other</h1>
-                    <div class="tools-used">
+                    <div class="other">
                         <ul>
-                            <li><span class="devicons devicons-windows"></span></li>
-                            <li><span class="devicons devicons-apple"></span></li>
-                            <li><span class="devicons devicons-ubuntu"></span></li>
-                            <li><span class="devicons devicons-photoshop"></span></li>
-                            <li><span class="devicons devicons-illustrator"></span></li>
+                            <li><i class="devicon-windows8-original"></i></li>
+                            <li><i class="devicon-apple-original"></i></li>
+                            <li><i class="devicon-ubuntu-plain"></i></li>
+                            <li><i class="devicon-photoshop-line"></i></li>
+                            <li><i class="devicon-illustrator-line"></i></li>
                         </ul>
-                    </div>                </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="section" id="section2">
